k8syml/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-deployment
  namespace: application
spec:
  selecto=r:
    matchLabels:
      app: static-dept
  replicas: 5 
  template:
    metadata:
      labels:
        app: static-dept
    spec:
      containers:
      - name: static
        image: 575317509857.dkr.ecr.us-west-2.amazonaws.com/staticonk8s:latest
        ports:
        - containerPort: 80
