k8syml/service.yml
apiVersion: v1
kind: Service
metadata:
  name:  myapp-svc
  namespace: staticapplication
spec:
  selector:
    app:  myapp
  ports:
  - port:  80
    targetPort:  8080
