k8syml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespasce: staticapplication
  labels:
    name: myingress
spec:
  rules:
  - host: static.naresh.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myappp-svc
            port: 
              number: 80
